--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <body>
     <h2>This is registration form</h2>
     <h3>Please fill in the details below:</h3>
+    <h4>New</h4>
     <form>
         <label for="username">Username:</label>
         <input type="text" id="username" name="username"><br><br>
