--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <h2>This is registration form</h2>
     <h3>Please fill in the details below:</h3>
     <h4>New</h4>
+    <h5>Registration</h5>
     <form>
         <label for="username">Username:</label>
         <input type="text" id="username" name="username"><br><br>
